--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,23 +5,28 @@ services:
     build:
       context: ..
       dockerfile: Dockerfile
+    image: portfolio:${VERSION:-latest}
     ports:
       - "3000:80"
     environment:
       - NODE_ENV=production
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:80"] # Remove /health endpoint as it doesn't exist
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
+      # Fallback health check if curl fails
+    networks:
+      - portfolio-network
 
   # Development service
   portfolio-dev:
     build:
       context: ..
       dockerfile: Dockerfile.dev
+    image: portfolio-dev:${VERSION:-latest}
     ports:
       - "5173:5173"
     volumes:
@@ -32,3 +37,15 @@ services:
     profiles:
       - dev
     command: bun run dev --host 0.0.0.0
+    networks:
+      - portfolio-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5173"] 
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
+
+networks:
+  portfolio-network:
+    driver: bridge
